[package]
name = "hyper_lmdb"
version = "0.1.0"
edition = "2021"
authors = ["hyper_lmdb contributors"]

[lib]
name = "hyper_lmdb"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35.0"
lmdb = "0.8"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
once_cell = "1.20"
hex = "0.4"

[features]
default = []